--- a/index.html
+++ b/index.html
@@ -49,7 +49,96 @@
         </div>
     </header>
 
-    <main></main>
-    <footer></footer>
+    <main>
+        <section class="sec_1">
+            <div class="sec_1_p1">
+                <h2>Our Popular Tours</h2>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                <div>
+                    <input type="text" placeholder="Read More">
+                </div>
+            </div>
+            <div class="sec_1_p2">
+                <img src="./images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+        <section class="sec_2">
+            <div>
+                <h2>Choose Your Destination</h2>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div>
+                <img src="./images/Rectangle 5.png" alt="">
+                <img src="./images/Rectangle 8.png" alt="">
+            </div>
+            <div>
+                <img src="./images/Rectangle 6.png" alt="">
+                <img src="./images/Rectangle 7.png" alt="">
+                <img src="./images/Rectangle 9.png" alt="">
+            </div>
+            <div>
+                <img src="./images/Rectangle 11.png" alt="">
+                <img src="./images/Rectangle 10.png" alt="">
+            </div>
+        </section>
+        <section class="sec_3">
+            <div class="sec_3_p1">
+                <h2>Why Choose Us</h2>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="sec_3_p2">
+                <div>
+                    <img src="./images/hotel.png" alt="">
+                    <h2>Handpicked Hotels</h2>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div>
+                    <img src="./images/map.png" alt="">
+                    <h2>World Class Service</h2>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+            <div class="sec_3_p3">
+                <img src="./images/price-tag.png" alt="">
+                <h2>Best Price Guarantee</h2>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. <br> Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+        </section>
+        <section class="sec_4"></section>
+        <section class="sec_5"></section>
+        <section class="sec_last">
+            <div>
+                <h2>Newsletter</h2>
+                <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr>
+                <input type="text" placeholder="Enter your name">
+                <input type="text" placeholder="Enter your email">
+                <button>Subscribe</button>
+            </div>
+            <div>
+                <img src="./images/Rectangle 8 (1).png" alt="">
+                <div>
+                    <p>Travel.com</p>
+                    <h3>Save up to 70%</h3>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="foot">
+        <h2>Hero Travel</h2>
+        <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <hr>
+        <img src="./images/twitter.png" alt="">
+        <img src="./images/facebook.png" alt="">
+        <img src="./images/instagram.png" alt="">
+        <img src="./images/github2.png" alt="">
+        <hr>
+        <p>2017, All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
