2nd day at night

--- a/index.html
+++ b/index.html
@@ -130,9 +130,12 @@
     </main>
 
     <footer class="foot">
-        <h2>Hero Travel</h2>
-        <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
-        <hr>
+        <div class="foot_p1">
+            <img src="./images/Group 40071 (2).png" alt="">
+            <h2>Hero <span>Travel</span> </h2>
+        </div>
+        <p class="foot_mid">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo <br> erat maecenas vitae elementum ultricies nullam. </p>
+        
         <img src="./images/twitter.png" alt="">
         <img src="./images/facebook.png" alt="">
         <img src="./images/instagram.png" alt="">
