3rd day at night

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <section class="sec_4"></section>
             <section class="sec_5"></section>
             <section class="sec_last">
-                <div>
+                <div class="sec_last_p1">
                     <h2>Newsletter</h2>
                     <p>Get your daily dose of travel news & tips. Sign up today!</p>
                     <hr>
@@ -119,7 +119,7 @@
                     <input type="text" placeholder="Enter your email">
                     <button>Subscribe</button>
                 </div>
-                <div>
+                <div class="sec_last_p2">
                     <img src="./images/Rectangle 8 (1).png" alt="">
                     <div>
                         <p>Travel.com</p>
