--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <div class="left">
                     <img src="./images/Group 40071 (2).png" alt="">
-                    <h2>Hero <span>Travel</span> </h2>
+                    <h2>North <span>View</span> </h2>
                 </div>
                 <div class="right">
                     <ul>
@@ -91,18 +91,18 @@
                     <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
                 </div>
                 <div class="sec_3_p2">
-                    <div>
+                    <div class="p10 ">
                         <img src="./images/hotel.png" alt="">
                         <h2>Handpicked Hotels</h2>
                         <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                     </div>
-                    <div>
+                    <div class=" m10">
                         <img src="./images/map.png" alt="">
                         <h2>World Class Service</h2>
                         <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                     </div>
                 </div>
-                <div class="sec_3_p3">
+                <div class="sec_3_p3 p10 ">
                     <img src="./images/price-tag.png" alt="">
                     <h2>Best Price Guarantee</h2>
                     <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.  Habitant adipiscing risus natoque aliquet. </p>
@@ -120,7 +120,7 @@
                     <button>Subscribe</button>
                 </div>
                 <div class="sec_last_p2">
-                    <img src="./images/Rectangle 8 (1).png" alt="">
+                    <!-- <img src="./images/Rectangle 8 (1).png" alt=""> -->
                     <div>
                         <p>Travel.com</p>
                         <h3>Save up to 70%</h3>
@@ -133,7 +133,7 @@
     <footer class="foot">
         <div class="foot_p1">
             <img src="./images/Group 40071 (2).png" alt="">
-            <h2>Hero <span>Travel</span> </h2>
+            <h2>North <span>View</span> </h2>
         </div>
         <p class="foot_mid">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo <br> erat maecenas vitae elementum ultricies nullam. </p>
         
